--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -41,14 +41,14 @@
       <ul>
         <li class="active"><a href="#hero-page"><i class='bx bxs-right-arrow-square'></i> <span>Introduction</span></a></li>
         <li><a href="#project"><i class='bx bxs-megaphone'></i><span>Overview</span></a></li>	
-        <li><a href="#methods"><i class="bx bx-book-content"></i> <span>Methodology</span></a></li>
-		<li><a href="#insights2"><i class='bx bxs-info-circle'></i> <span>Insights</span></a></li>
-        <li><a href="#prototype"><i class='bx bx-right-arrow'></i> <span>Prototype</span></a></li>
+        <li><a href="#project"><i class="bx bx-book-content"></i> <span>Project</span></a></li>
+		<li><a href="#prototype"><i class='bx bxs-info-circle'></i> <span>Prototype</span></a></li>
+       <!-- <li><a href="#prototype"><i class='bx bx-right-arrow'></i> <span>Prototype</span></a></li> -->
       </ul>
     </nav><!-- .nav-menu -->
 
   </header>
-<nav class="navbar bg-transparent navbar-expand-lg navbar-light light">
+<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
   <a class="navbar-brand" href="index.html"><img class="object" src="assets/img/Personal/Logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -115,7 +115,7 @@
               <b>TRIDENT</b> stands for Tri-Positional Detection and Navigational Technology. The key features of the system include enhanced awareness of surroundings, detection of obstacles above and below the waist, modes for long and short range detection and choice of output. These features have been determined from interviews conducted with blind joggers and runners.
             </p>
           </div>
-		  <div class="content">
+		  <div class="container content">
 		  <h3>My Role</h3>
 		  <p class="justified text-aria"> As the main user researcher and one of two people who built the device, I successfully built a prototype using the insights and data I collected from generative research conducted initially.  </p>
 		  <h3>Goals</h3>
@@ -125,6 +125,9 @@
         </div>
       </div>
     </section>
+	<div class="container" data-aos="fade-up">
+	<iframe width="540" height="400" class="center"  src="https://www.youtube.com/embed/HjoRWTdUwBQ"> </iframe>
+	</div>
 	
 	<!-- ======= INTRODUCTION Details ======= -->
 	
@@ -132,7 +135,7 @@
 
         <div class="section-title">
       <div class="container" data-aos="fade-up">
-	<h2 class="portfolio-title">The project</h2>
+	<h2 class="portfolio-title uppermargin">The project</h2>
 		  
 		  <p class="justified">
             <span class = "text-aria"> From initial discussions, we observed that the main problems arise when obstacles with moving obstacles and ones at head height. Often, they find it hard to concentrate on the path because of the obstacles. To alleviate some of these standing problems, our team at the University of Maryland, Baltimore County decided to build a device for blind runners through the <span class="irqhighlight"> user centered approach </span>. The project was done under the watchful eye of Dr.Ravi Kuber. </span> </p>
@@ -300,7 +303,8 @@
 	<section id ="prototype">
 	<div class="container uppermargin" data-aos="fade-up">
           <div>
-          <h2 class="header-aria">Prototype Design and Development</h2>
+		  <div class="section-title">
+          <h2>Prototype Design and Development</h2>
 		  <img src="assets/img/Personal/Build.jpg" class="avatar7" alt="">
           </div>
 		  <p class="justified">
@@ -331,7 +335,7 @@
           </div>
 			  <blockquote> <i>If we can move on to kind of more specifics of how the device responds. So, if it's clear that we have awareness of the user you can get objects in front of you to the sides and behind you.</i></blockquote>
 			  <blockquote> <i>Yeah, I guess my question is, how we find the vibration. Is it just going to drop off if you move to the left or right of the obstacle?</i></blockquote>
-			  <blockquote> <i>How how heavy the pieces are and how bulky it is but I think that's something to definitely consider. Especially if it's a battery-operated.</i></blockquote>
+			  <blockquote> <i>How heavy the pieces are and how bulky it is but I think that's something to definitely consider. Especially if it's a battery-operated.</i></blockquote>
 			  </div>
 			
     </section><!-- End Evaluation Details -->
@@ -358,7 +362,7 @@
 	<h4><b>Obstacle course evaluation </b></h4>
 			<p class ="justified"><span class = "text-aria">We will be running an evaluation study with an obstacle course to draw further insights for future iterations. You can find the evaluation document <a href ="#">here </a>. </span> </p>
 			<h4 class="uppermargin"><b>A/B Testing</b></h4>
-			<p class ="justified"><span class = "text-aria">A/B Testing to be done on the iterated prototype with the older version. </span> </p>
+			<p class ="justified"><span class = "text-aria">A/B Testing to be done on the different editions of the prototype. </span> </p>
 			</div>
 			</div>
 	</div>
