--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -372,7 +372,7 @@
   <section id="insights2">
       <div class="container" data-aos="fade-up">
           <h2 class="headingtitle"><b>Takeaways</b></h2>
-		<p class="headingtitle"><span class="introtext">From the start to finish, this project has been a learning curve, and we are still on the process of refining the prototype. I realized that empathy generation is key because of the type of audience involved. In addition to that, I also learned to employ the human aspect in research. For without connection and interaction with people, I believe that nothing is possible. Figuring out the research techniques and drawing the right insights is a challenge in itself. Additionally, as we are dealing with a niche audience, getting people for interviews and observation was also a challenge. Here is hoping that this prototype becomes a product someday.  </span></p>
+		<p class="headingtitle"><span class="text-aria">From the start to finish, this project has been a learning curve, and we are still on the process of refining the prototype. I realized that empathy generation is key because of the type of audience involved. In addition to that, I also learned to employ the human aspect in research. For without connection and interaction with people, I believe that nothing is possible. Figuring out the research techniques and drawing the right insights is a challenge in itself. Additionally, as we are dealing with a niche audience, getting people for interviews and observation was also a challenge. Here is hoping that this prototype becomes a product someday. </span></p>
 	  </div>
     </section>
   
