--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -34,8 +34,8 @@
 
 <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="d-flex flex-column justify-content-center">
+   <!-- ======= Header ======= -->
+  <!-- <header id="header" class="d-flex flex-column justify-content-center">
 
     <nav class="nav-menu">
       <ul>
@@ -43,11 +43,11 @@
         <li><a href="#project"><i class='bx bxs-megaphone'></i><span>Overview</span></a></li>	
         <li><a href="#project"><i class="bx bx-book-content"></i> <span>Project</span></a></li>
 		<li><a href="#prototype"><i class='bx bxs-info-circle'></i> <span>Prototype</span></a></li>
-       <!-- <li><a href="#prototype"><i class='bx bx-right-arrow'></i> <span>Prototype</span></a></li> -->
+       <!-- <li><a href="#prototype"><i class='bx bx-right-arrow'></i> <span>Prototype</span></a></li> 
       </ul>
-    </nav><!-- .nav-menu -->
+    </nav><!-- .nav-menu 
 
-  </header>
+  </header> -->
 <nav class="navbar navbar-default navbar-expand-lg navbar-light light">
   <a class="navbar-brand" href="index.html"><img class="object" src="assets/img/Personal/Logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
