--- a/coeit-research.html
+++ b/coeit-research.html
@@ -68,94 +68,104 @@
 
   <main>
 
-    <!-- ======= Portfolio Details ======= -->
-        <section id="portfolio-details" class="portfolio-details mygradient">
-      <div class="container herosection" data-aos="fade-up">
-
-        <div class="row">
-
-          <div class="col-lg-8 d-flex align-items-center">
-            <h1 class="portfolio-title1">University of Maryland, Baltimore County - College of Engineering and Information Technology's Research Website Redesign</h1>
-            
-          </div>
-
-          <div class="col-lg-4 portfolio-info introbox">
-            <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
-            <ul>
-              <li><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
-              <li><strong>User Base</strong>: Students, Faculty, Researchers.</li>
-              <li><strong>Project Timeline</strong>: January 2020 - May 2020</li>
-              <li><strong>Team Members</strong>: 2 student team </a></li>
-			  <li><strong>My Role</strong>: User Researcher</a></li>
-            </ul>
-
-            <p class="justified">
-             Research websites are generally verbose. So it must be said that people would like to look through the headlines and then proceed towards the website’s actual content. The COEIT research website was identified by people to be a little gaudy on the eye and have some prevailing issues that make the user shy away from the current website. Hence the attempt to redesign.
-            </p>
-          </div>
-
-        </div>
+	<section id="hero-page3" class="d-flex flex-column justify-content-center">
+		<div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <h1>University of Maryland, Baltimore County - College of Engineering and Information Technology's Research Website Redesign</h1>
+       </div>
 
       </div>
+    </section>
+
+	<section id="project" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Overview</h2>
+          <p class="justified text-aria">
+		  As a semester project, our client's (College of Engineering and Information Technology - <b>Abbv: COEIT </b>) approached us to conduct research and provide redesigns for the research website.</p>
+        </div>
+		
+		 <div class="row">
+          <div class="col-lg-4">
+            <img src="assets/img/Personal/Homepage.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <p class="justified"><ul>
+              <li><strong>Categories</strong>: User Research, Website Redesign, User-Centered Design</li>
+              <li><strong>User Base</strong>: Students, Faculty, Researchers.</li>
+              <li><strong>Project Timeline</strong>: January 2020 - May 2020</li>
+              <li><strong>Team Members</strong>: 2 student team </li>
+            </ul> </p>
+			
+			</p>
+			<h3> About the Project</h3>
+            <p class="justified">
+              Research websites are generally verbose. So it must be said that people would like to look through the headlines and then proceed towards the website’s actual content. The COEIT research website was identified by users to be a little gaudy on the eye and have some prevailing issues that make the user shy away from the current website. Hence, we incorporated evaluative research and helped redesign the website for better user retention and increase the average time the users spend on the website.
+            </p>
+		</div>
+    <!-- ======= Portfolio Details ======= -->
+        <div class="container content">
+		</br>
+		  <h3>My Role</h3>
+		  <p class="justified text-aria"> One of the two user researchers responsible for conducting the qualitative study and help improve the usability of the existing product.  </p>
+		  <h3>Goals</h3>
+            <p class="justified text-aria">
+				Through the insights derived from the qualitative study, we improved the overall usability of the website via the redesigns, mapped the users mental models with those of the conceptual models, and projected an increase in the number of people visiting the website. 
+			  </div>
+        </div>  
+	  </div>
+    </section>
+	<section id="project" class="about">
+
+        <div class="section-title">
+      <div class="container" data-aos="fade-up">
+	<h2 class="portfolio-title uppermargin">The project</h2>
+		  
+		  <p class="justified">
+            <span class = "text-aria"> Our client, the College of Engineering and Information technology (COEIT) highlighted some problems in their research website. The issues stem from the decreased usability and decreased user reach in the website. Our team decided to employ user research and help improve the usability of the website. </span> </p> </span> </p>
+			
+          </div>
+		</div>
     </section>
 	
 	<section>
       <div class="container" data-aos="fade-up">
-	<h2 class="portfolio-title"><b>Shendelzare and her bid to improve usability</b></h2>
-		  <div class ="row">
-		  <div class ="col-md-2">
-		  <img src="assets/img/Personal/avatar3.png" class="img-fluid avatar" alt="">
-          </div>
-		  <div class="col-md-10">
-		  <p class="justified">
-            <span class = "introtext"> Shendelzare, is a lead at the University of Maryland, Baltimore County (Abbv UMBC)'s College of Engineering and Information technology's <b>(Abbv COEIT)</b> research website</span> </p>
-			<span class = "introtext"> Her issues stem from the decreased usability of the COEIT research website and cites decreased user reach in the website. The team of another student and myself decided to take matters into our own hands as a term research project and make the website usable, user friendly via user researh and incorporating UX methodologies. </span> </p>
-          </div>
-		</div>
-        </div>
-    </section>
-	
-	<section id="requirements">
-      <div class="container" data-aos="fade-up">
-          <div class="horizontalline2"></div>
 		  <div>
-          <h2 class="coeit-introduction" id="requirements"><b>Requirements</b></h2>
+          <h2 class="header-aria" id="requirements"><b>Requirements</b></h2>
           </div>
 		  <p class="justified">
-            <span class = "introtext"> Shendelzare wants increased usability and improved traffic on the website.</span> </p>
-		  <div class="horizontalline3"></div>
+            <span class = "text-aria"> Increased usability and improved traffic on the website.</span> </p>
 		</div> 
 	</section>
 	
 	<section>
       <div class="container" data-aos="fade-up">
-          <h2><b>Initial usability concerns</b></h2> 
-		  <p class="justified">
-            <span class = "introtext"> Shendelzare outlined some usability concerns and gave us a document highlighting the issues. Concerns were related to <span class="irqhighlight"> inconsistent content </span>, <span class="irqhighlight">  limited to no user engagement </span>, <span class="irqhighlight"> content being verbose </span>, <span class="irqhighlight">  no clear pathways for research content </span>, and <span class="irqhighlight">  the site not being designed for an assorment of users.</span> </p>
+          <h2 class="header-aria"><b>Initial usability concerns</b></h2> 
+		  <p class="justified ">
+            <p><ul class="text-aria"> <li> Inconsistent content </li>
+			<li>limited to no user engagement </li>
+			<li> Verbose Content </li>   
+			<li> no clear pathways for research content </li>
+			<li> The site not designed for an assorment of users. </li>
+			</ul>
+		</p>
 		</div>
     </section>
 	
 	<section>
       <div class="container" data-aos="fade-up">
-          <h2><b>So what did we do?</b></h2> 
+          <h2 class="header-aria"><b>Basic Questions</b></h2> 
 		  <p class="justified">
-            <span class = "introtext"> We had our work cut out. As researchers in this project, we wanted to get answers to basic questions. </span> </p>
-		
-		<h4 class = "userbasecolor"><b>Who are the users? </b></h4>
-		<p class="justified"> <span class = "introtext"> The COEIT research website is a source of information regarding research in UMBC. It is used by students aged 18-35, as well as professors (Age 30-70). External researchers may also use the website to learn more about research being conducted at UMBC. </span> </p>	
-		<h4 class = "userbasecolor"><b>What problem are we solving? </b></h4>
-		<p class="justified"> <span class = "introtext"> The COEIT research website has a lot of usability issues. We are trying to improve the usability and enable more people visit the website. </span> </p>
-		<h4 class = "userbasecolor"><b>How are we solving the problem? </b></h4>
-		<p class="justified"> <span class = "introtext"> As we were two people solving the issue, we needed a process and a set of research methods to help steer the redesign. </span> </p>
+		<h5 class = "userbasecolor"><b>Who are the users? </b></h5>
+		<p class="justified"> <span class = "text-aria"> The COEIT research website is a source of information regarding research in UMBC. It is used by students aged 18-35, as well as professors (Age 30-70). External researchers may also use the website to learn more about research being conducted at UMBC. </span> </p>	
+		<h5 class = "userbasecolor"><b>What problem are we solving? </b></h5>
+		<p class="justified"> <span class = "text-aria"> The COEIT research website has a lot of usability issues. We are trying to improve the usability and enable more people visit the website. </span> </p>
+		<h5 class = "userbasecolor"><b>How are we solving the problem? </b></h5>
+		<p class="justified"> <span class = "text-aria"> As we were two people solving the issue, we needed a process and a set of research methods to help steer the redesign. </span> </p>
     </div>
 	</section>
 
-	<section id="process2">
-      <div class="container" data-aos="fade-up">
-          <h2 class="headingtitle"><b>The Process</b></h2>
-		  <img src="assets/img/Personal/DD2.png" class ="avatar9" alt="">
-		  </div>
-    </section>
+	
 	
 	<section>
       <div class="container" data-aos="fade-up">
@@ -385,7 +395,7 @@
         </div>
     </section>
 	
-	 <section id="insights">
+	 <section id="insights2">
       <div class="container" data-aos="fade-up">
           <h2 class="headingtitle"><b>Takeaways</b></h2>
 		<p class="headingtitle justified"><span class="introtext">As the COEIT research website is a text-heavy website with a lot of cross-page navigation, we wanted to focus on incremental development rather than changing the setup altogether. We have come up with the designs so that all the concerns and pain points are taken care of. We were cautious in choosing the color of the buttons, how the pagination works on the page, and allowing the user some freedom on the reverse navigation, something that the users complained about. Additionally, this was an enjoyable experience as it involved a lot of user research and data synthesis. I got a teammate who helped me grow as the project wore on. In the future, we would like to see this design change being implemented as we believe that our prototype <span class="irqhighlight"> <b> can attract a much bigger audience </b></span>, given our exhaustive and extensive work to refine the existing website  </span></p>
