--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -37,7 +37,7 @@
 
 <body>
 
-<nav class="navbar sticky-top  navbar-expand-lg navbar-light light">
+<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
   <a class="navbar-brand" href="index.html"><img class="object" src="assets/img/Personal/Logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
