--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -68,54 +68,67 @@
 </nav>
 
   <main>
-
-    <!-- ======= Portfolio Details ======= -->
-    <!-- ======= Portfolio Details ======= -->
-        <section id="portfolio-details" class="portfolio-details mygradient">
-      <div class="container herosection" data-aos="fade-up">
-
-        <div class="row">
-
-          <div class="col-lg-8 d-flex align-items-center">
-            <h1 class="portfolio-title1">University of Maryland, Baltimore County - College of Engineering and Information Technology's Shared Services Center Website Redesign</h1>
-            
-          </div>
-
-          <div class="col-lg-4 portfolio-info introbox">
-            <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
-            <ul>
-              <li><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
-              <li><strong>User Base</strong>: Students, Faculty, General Audience</li>
-              <li><strong>Project Timeline</strong>: </li>
-              <li><strong>Team Members</strong>: Finance Specialists, Web Developers, Business Associates </a></li>
-			  <li><strong>My Role</strong>: User Researcher and Web developer</a></li>
-            </ul>
-
-            <p class="justified">
-             The COEIT SSC website suffered from decreased audience because of usability and content structure related issues. Through thorough user research, we aim to change the existing structure of the website to improve the number of people visiting the website.
-            </p>
-          </div>
-
-        </div>
+	<section id="hero-page4" class="d-flex flex-column justify-content-center">
+		<div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <h1>Shared Services Center website research and redesign project.</h1>
+       </div>
 
       </div>
     </section>
-	
-	<section>
+	<section id="project" class="about">
       <div class="container" data-aos="fade-up">
-	<h2 class="portfolio-title"><b>Egen's dilemma </b></h2>
-		  <div class ="row">
-		  <div class ="col-md-2">
-		  <img src="assets/img/Personal/avatar5.png" class="img-fluid avatar" alt="">
+
+        <div class="section-title">
+          <h2>Overview</h2>
+          <p class="justified text-aria">
+		  My team at the Shared Services Center - <i>abbv:SSC </i> (A team that is involved in the finances and business aspects) of the university wanted to restructure the website to increase the number of users and improve the overall usability. Hence the user research project. </p>
+        </div>
+		
+		 <div class="row">
+          <div class="col-lg-4">
+            <!--<img src="assets/img/Personal/.png" class="img-fluid" alt=""> -->
           </div>
-		  <div class="col-md-10">
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <p class="justified"><ul>
+              <li><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
+              <li><strong>User Base</strong>: Students, Faculty, General Audience who want information related to anything the Shared Services Center has to offer.</li>
+              <li><strong>Project Timeline</strong>: September 2020 - Present </li>
+              <li><strong>Team Members</strong>: Finance Specialists, Business Associates </a></li>
+			  <li><strong>My Role</strong>: User Researcher and Web developer</a></li>
+            </ul>
+			
+			</p>
+			<h3> About the Project</h3>
+            <p class="justified">
+                The Shared Services Center website suffered from decreased audience because of usability and content structure related issues. Through user research, our aim to change the existing structure of the website to improve the number of people visiting the website and hence, improve some of the parameters like the amount of time spent by the user on the website, time on each task, efficiency of information retrieval, etc,. In addition, another goal of ours is to provide good content, in an attempt to reduce the current bounce rates.
+            </p>
+		</div>
+    <!-- ======= Portfolio Details ======= -->
+        <div class="container content">
+		</br>
+		  <h3>My Role</h3>
+		  <p class="justified text-aria"> User researcher and web developer responsible for carrying out the research and implementing the findings from the data through front-end web technologies to yield positive results.  </p>
+		  <h3>Goals</h3>
+            <p class="justified text-aria">
+				Through the insights derived from the qualitative study (Observations, 1-1 interviews), I am working towards reducing the bounce rate, increasing the number of users visiting the website, and help improve the overall retention rate. 
+			  </div>
+        </div>  
+	  </div>
+    </section>
+	
+	
+	
+	 <div class="section-title">
+      <div class="container" data-aos="fade-up">
+	<h2 class="portfolio-title uppermargin">The project</h2>
+		  
 		  <p class="justified">
-            <span class = "introtext"> Egen, is a one of the specialists at the University of Maryland, Baltimore County (Abbv UMBC)'s College of Engineering and Information technology's <b>(Abbv COEIT)</b> Shared Services Center (Abbv SSC)</span> </p>
-			<span class = "introtext"> Egen outlined a few problems when it came to the COEIT SSC Website.To alleviate those problems,he wants to restructure the website so that it leads to improved audience numbers. This led to him appointing me as both a user researcher and web developer. </span> </p>
+            <span class = "text-aria"> The team at the Shared Services Center  is looking to restructure the website to help guide users better, and help provide the required information with ease.</span> </p>
+			
           </div>
 		</div>
-        </div>
     </section>
+	
 	
 	<section>
 	<div class="container">
