--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                 </svg>
                 <i class='bx bx-sitemap'></i>
               </div>
-              <h4><a href="coeit-research.html">Web Research Project #1</a></h4>
-              <p>User research project of the University of Maryland, Baltimore County's College of Engineering and Information Technology's RESEARCH website.</p>
+              <h4><a href="coeit-research.html">COEIT Research</a></h4>
+              <p>User research project of the univeristy's College of Engineering and Information Technology's RESEARCH website.</p>
             </div>
           </div>
 
@@ -151,8 +151,8 @@
                 </svg>
                 <i class='bx bx-analyse'></i>
               </div>
-              <h4><a href="coeit-ssc.html">Web research project #2</a></h4>
-              <p>User research project of the University of Maryland, Baltimore County's College of Engineering and Information Technology's SHARED SERVICES CENTER website.</p>
+              <h4><a href="coeit-ssc.html">Shared Services Center</a></h4>
+              <p>User research project of the SHARED SERVICES CENTER (Payroll and Finances) website.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
