--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </svg>
                <i class='bx bx-braille'></i>
               </div>
-              <h4><a href="navigational-aid.html">TRIDENT</a></h4>
+              <h4 class="hover"><a href="navigational-aid.html">TRIDENT</a></h4>
               <p>A navigational wearable aid for individuals who are blind</p>
           </div>
 		</div>
@@ -138,7 +138,7 @@
                 </svg>
                 <i class='bx bx-sitemap'></i>
               </div>
-              <h4><a href="coeit-research.html">COEIT Research</a></h4>
+              <h4 class="hover"><a href="coeit-research.html">COEIT Research</a></h4>
               <p>User research project of the univeristy's College of Engineering and Information Technology's RESEARCH website.</p>
             </div>
           </div>
@@ -151,7 +151,7 @@
                 </svg>
                 <i class='bx bx-analyse'></i>
               </div>
-              <h4><a href="coeit-ssc.html">Shared Services Center</a></h4>
+              <h4 class="hover"><a href="coeit-ssc.html">Shared Services Center</a></h4>
               <p>User research project of the SHARED SERVICES CENTER (Payroll and Finances) website.</p>
             </div>
           </div>
@@ -163,7 +163,7 @@
                 </svg>
                 <i class='bx bx-mobile-vibration'></i>
               </div>
-              <h4><a href="mobileapp.html">B-AID</a></h4>
+              <h4 class="hover"><a href="mobileapp.html">B-AID</a></h4>
               <p>A mobile application prototype for individuals who are visually impaired.</p>
             </div>
           </div>
