--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	  
 	  <div class="section-title">
           <h2>Projects</h2>
-          <p>My work focuses on <b>accessibility</b> and <b>user research </b>. View some of my work below.</p>
+          <p>My work focuses on employing user research in projects that involve the element of accessibility too. </b> View some of my work below.</p>
         </div>
 
         <div class="row">
@@ -105,7 +105,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Accessibility</li>
-              <li data-filter=".filter-card">User Research</li>
+              <li data-filter=".filter-card">Mobile and Web</li>
               <!-- <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
@@ -155,7 +155,7 @@
               <p>User research project of the SHARED SERVICES CENTER (Payroll and Finances) website.</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app filter-card">
             <div class="icon-box iconbox-yellow">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
