--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
 			<h3 class="resume-title">Skills</h3>
             <div class="resume-item">
               <h4>METHODOLOGIES</h4>
-			  <h6>Contextual Inquiry, User Interviews, Qualitative Coding, Usability Testing, Heuristic Evaluations, Affinity Mapping, Participatory Design, A/B Testing, research reports, mind maps, User Journeys, Dairy Studies, Card Sorting, Surveys </h6>
+			  <h6 class="justified">Contextual Inquiry, User Interviews, Qualitative Coding, Usability Testing, Heuristic Evaluations, Affinity Mapping, Participatory Design, A/B Testing, research reports, mind maps, User Journeys, Dairy Studies, Card Sorting, Surveys </h6>
              </div>
             <div class="resume-item">
               <h4>UX DESIGN</h4>
-			  <h6>Storyboards, Wireframing,  Information Architecture, Brainstorming, Prototyping, User Personas, Whiteboarding, Interaction Design, JTBD Framework, Accessibility, User Centered Design</h6>
+			  <h6 class="justified">Storyboards, Wireframing,  Information Architecture, Brainstorming, Prototyping, User Personas, Whiteboarding, Interaction Design, JTBD Framework, Accessibility, User Centered Design</h6>
             </div>
 			<div class="resume-item">
               <h4>TOOLS</h4>
@@ -283,9 +283,9 @@
               <h5>2020 - Present</h5>
               <p><em>University of Maryland, Baltimore County </em></p>
               <ul>
-                <li>Drive all research related activities for the Shared Services Team of the University of Maryland, Baltimore County [CLIENT]. </li>
-                <li>Collect, analyze, and share qualitative and quantitative data through a mixed methods approach. Perform usability tests to evaluate the performance of the current product. Communicating the findings to the business team to help increase revenue. </li>
-                <li>Currently Engaged in extensive user research to define specific shortcomings, identifying stakeholder needs and aid the redesign to reduce bounce rates, help improve the page visits, and the overall usability.	</li>
+                <li class="justified">Drive all research related activities for the Shared Services Team of the University of Maryland, Baltimore County [CLIENT]. </li>
+                <li class="justified">Collect, analyze, and share qualitative and quantitative data through a mixed methods approach. Perform usability tests to evaluate the performance of the current product. Communicating the findings to the business team to help increase revenue. </li>
+                <li class="justified">Currently Engaged in extensive user research to define specific shortcomings, identifying stakeholder needs and aid the redesign to reduce bounce rates, help improve the page visits, and the overall usability.	</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -293,18 +293,18 @@
               <h5>2019-2020</h5>
               <p><em>University of Maryland, Baltimore County</em></p>
               <ul>
-                <li>Investigated the navigational habits of individuals who are blind in low- and medium-income countries and drew insights from the various findings based on interviews to provide references for the design of future assistive technologies in the navigational space.</li>
+                <p class="justified">Investigated the navigational habits of individuals who are blind in low- and medium-income countries and drew insights from the various findings based on interviews to provide references for the design of future assistive technologies in the navigational space.</p>
               </ul>
             </div>
 			            <div class="resume-item">
               <h4>SOFTWARE ENGINEER (UI/UX)</h4>
               <h5>2017 - 2019</h5>
-              <p><em> LTI (A Larsen and Toubro Group Company), Bangalore, India</em></p>
+              <p><em> L & T Infotech - Bangalore, India</em></p>
 			  <br>
               <ul>
-                <li>Collaborated with multiple clients of LTI (a Larsen and Toubro group company) in a cross-functional setup with the working knowledge of Adobe Experience Manager (a web content management tool) and implemented front-end technologies (HTML, JavaScript, CSS, AJAX) to create a web-based insurance portal. </li>
-                <li>The portal enables users to perform quotation related operations and track the data over a period.  </li>
-                <li>Before development, I was a part of the team that conducted generative research on the product to find potential solutions and opportunities that can maximize revenue and profits. </li>
+                <li class="justified">Collaborated with multiple clients of LTI (a Larsen and Toubro group company) in a cross-functional setup with the working knowledge of Adobe Experience Manager (a web content management tool) and implemented front-end technologies (HTML, JavaScript, CSS, AJAX) to create a web-based insurance portal. </li>
+                <li class="justified">The portal enables users to perform quotation related operations and track the data over a period.  </li>
+                <li class="justified">Before development, I was a part of the team that conducted generative research on the product to find potential solutions and opportunities that can maximize revenue and profits. </li>
               </ul>
             </div>
           </div>
