--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <ul>
                 <li class="justified">Drive all research related activities for the Shared Services Team of the University of Maryland, Baltimore County [CLIENT]. </li>
                 <li class="justified">Collect, analyze, and share qualitative and quantitative data through a mixed methods approach. Perform usability tests to evaluate the performance of the current product. Communicating the findings to the business team to help increase revenue. </li>
-                <li class="justified">Currently Engaged in extensive user research to define specific shortcomings, identifying stakeholder needs and aid the redesign to reduce bounce rates, help improve the page visits, and the overall usability.	</li>
+                <li class="justified">Currently Engaged in extensive user research to define specific shortcomings, identifying stakeholder needs and aid the redesign to reduce bounce rates (Current- 60%, Projected 30-40%), help improve the page visits, and the overall usability.	</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -302,9 +302,9 @@
               <p><em> L & T Infotech - Bangalore, India</em></p>
 			  <br>
               <ul>
-                <li class="justified">Collaborated with multiple clients of LTI (a Larsen and Toubro group company) in a cross-functional setup with the working knowledge of Adobe Experience Manager (a web content management tool) and implemented front-end technologies (HTML, JavaScript, CSS, AJAX) to create a web-based insurance portal. </li>
+                <li class="justified">Collaborated with multiple clients of L&T Infotech (Hartford Steam Boiler, Mercer) in a cross-functional setup with the working knowledge of Adobe Experience Manager (a web content management tool) and implemented front-end technologies (HTML, JavaScript, CSS, AJAX) to create a web-based insurance portal.</li>
                 <li class="justified">The portal enables users to perform quotation related operations and track the data over a period.  </li>
-                <li class="justified">Before development, I was a part of the team that conducted generative research on the product to find potential solutions and opportunities that can maximize revenue and profits. </li>
+                <li class="justified">Part of the team that conducted generative research on the product to find potential solutions and opportunities that can maximize revenue and profits. </li>
               </ul>
             </div>
           </div>
