--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Anirudh Nagraj</h4>
-              <p><em> Innovative and research driven individual with two years of corporate experience. Keen to work with the results obtained from thorough user research to build better products.</em></p> 
+              <p class="justified"><em> Innovative and research driven individual with two years of corporate experience. Keen to work with the results obtained from thorough user research to build better products.</em></p> 
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -241,7 +241,7 @@
               <p><em>University of Maryland, Baltimore County</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Engineering, Information Science and Engineering</h4>
+              <h4 class="justified">Bachelor of Engineering, Information Science and Engineering</h4>
               <h5>2013-2017</h5>
               <p><em>R V College of Engineering, Bangalore, India</em></p>
             </div>
@@ -257,7 +257,7 @@
             </div>
 			<div class="resume-item">
               <h4>TOOLS</h4>
-			  <h6>Adobe XD, Figma, InVision, Sketch, Balsamiq Mockups, Adobe Illustrator, JIRA, AirTable, Survey Monkey, Google Suite, Miro</h6>
+			  <h6 class="justified">Adobe XD, Figma, InVision, Sketch, Balsamiq Mockups, Adobe Illustrator, JIRA, AirTable, Survey Monkey, Google Suite, Miro</h6>
             </div>
 			<div class="resume-item">
               <h4>PROGRAMMING and PROCESS</h4>
