--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
             </div>
           </div>
         </div>
-
+	
+		  <p align="right"><i>To download the resume, Please click <a href="\assets\img\Personal\Anirudh_Nagraj_Resume" download>here </i></a>.
       </div>
     </section><!-- End Resume Section -->
 
