--- a/index.html
+++ b/index.html
@@ -230,7 +230,6 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Anirudh Nagraj</h4>
               <p class="justified"><em> Innovative and research driven individual with two years of corporate experience. Keen to work with the results obtained from thorough user research to build better products.</em></p> 
             </div>
 
@@ -310,7 +309,7 @@
           </div>
         </div>
 	
-		  <p align="right"><i>To download the resume, Please click <a href="\assets\img\Personal\Anirudh_Nagraj_Resume" download>here </i></a>.
+		  <p align="right"><i>To view the resume as a pdf, please click <a href="assets\img\Personal\Anirudh_Nagraj_Resume.pdf" target="_blank" type="application/pdf">here </i></a>.
       </div>
     </section><!-- End Resume Section -->
 
